<resources>
    <string name="app_name">apprecetas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--=== DATA FOR ADMOB ===================================================================== -->
    <string name="privacy_policy_url">
        http://dream-space.web.id/doc_privacy/privacy_policy.php?name=Material%20Recipe
    </string>

    <string name="more_app_url">
        http://portfolio.dream-space.web.id/
    </string>

    <!-- Nav Drawer Menu Items -->
    <string name="title_nav_recipes">Recipes</string>
    <string name="title_nav_category">Category</string>
    <string name="title_nav_favorites">Favorites</string>
    <string name="title_nav_setting">Settings</string>
    <string name="title_nav_rate">Rate</string>
    <string name="title_nav_more">More Apps</string>
    <string name="title_nav_about">About</string>

    <!--activity Main-->
     <string name="press_again_exit_app">Press again to exit</string>

    <!--Recipes, Category, Favorites Fragment-->
    <string name="task_running">Task still running</string>
    <string name="refresh_failed">Refresh failed</string>
    <string name="data_success_loaded">Data Load Successfully</string>
    <string name="load_of">Load %1$d of %2$d</string>
    <string name="no_item">No Item</string>

    <!--activity Recipe Details-->
    <string name="remove_favorites">remove from favorites</string>
    <string name="add_favorites">add to favorites</string>
    <string name="share_action">Share</string>
    <string name="duration_unit">minutes</string>
    <string name="instructions">Instructions</string>

    <!--activity Search-->
    <string name="hint_input_recipe">Search Recipe</string>
    <string name="hint_input_category">Search Category</string>
    <string name="please_fill_input">Please Fill Input Search</string>

    <!--activity Setting-->
    <string name="default_notification_channel_id">Default</string>
    <string name="activity_title_settings">Settings</string>
    <string name="title_dialog_theme">Color Theme</string>
    <string name="dialog_confirm_title">Confirmation</string>
    <string name="message_clear_image_cache">Are you sure want to clear image cache?</string>
    <string name="message_after_clear_image_cache">Image cache successfully clear</string>
    <string name="grant_permission_account">Grant account permission to enable</string>
    <string name="term_condition">Term &amp; Policies</string>
    <string name="about">About</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="build_version">Build Version</string>
    <string name="version">Version</string>
    <string name="content_term">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dolor risus, aliquet a erat quis, viverra molestie orci. Suspendisse vehicula porta libero. Nam tincidunt nulla ipsum, vel iaculis risus scelerisque sed. Phasellus venenatis, enim vel placerat blandit, leo eros bibendum erat, at auctor mauris diam ac risus. Aenean sit amet congue neque, sit amet condimentum elit. Fusce lacinia massa vel nisl scelerisque, in scelerisque dolor elementum. Vivamus leo enim, congue dictum congue vitae, porttitor id purus. Sed eu ultricies erat. Morbi hendrerit, mi ac volutpat commodo, magna turpis pretium nibh, at fringilla eros lorem quis tellus. Praesent porttitor purus nibh, ac vestibulum massa fringilla vel. Pellentesque dapibus nulla quis luctus dictum. In scelerisque ut ex sed facilisis. Nunc eu finibus nulla, ut hendrerit sem. Suspendisse accumsan risus vel diam fringilla iaculis.
        \n\nQuisque facilisis finibus aliquam. Sed mattis, dui fringilla ornare finibus, orci odio blandit risus, ut maximus dui odio non leo. Donec laoreet lacus nisi, a mollis velit suscipit ac. Quisque faucibus ut nisl in congue. Nam sagittis consectetur tempus. Suspendisse eget posuere dui. Donec ultricies velit ex, vel cursus odio sollicitudin in. Nullam faucibus auctor ligula, eu rhoncus dui facilisis a. Curabitur vel feugiat est. Quisque congue at enim eleifend ultrices. Proin dapibus risus lorem, nec condimentum nunc consequat vitae. Quisque sapien lorem, vestibulum vitae justo eget, fringilla eleifend nisi.
        \n\nMauris ultricies augue sit amet est sollicitudin laoreet. Fusce ut congue felis. Fusce dictum tristique elit nec iaculis. Mauris sodales tempus fringilla. Fusce nec nunc tempus, tempor sapien sit amet, ultricies erat. Mauris ultrices ac lorem ultrices facilisis. Nam pharetra, nisi a imperdiet interdum, nunc justo ultricies nisl, a laoreet massa dui vel enim. Pellentesque et magna ac tellus ullamcorper malesuada a ac nisl. Curabitur id est et neque convallis accumsan. Aliquam eleifend varius massa. Curabitur eu finibus tortor.
        \n\nVivamus aliquam nisl rutrum orci volutpat porta in ornare est. Quisque ligula ipsum, vulputate id aliquam vitae, semper vitae orci. Nam non pulvinar ligula, eget tincidunt ante. Quisque sapien massa, varius tempus pretium id, vehicula at magna. Ut ut ultrices augue. Nam nec ullamcorper tellus, at finibus lectus. Fusce vel iaculis mauris, id porta nulla. Aenean ac mollis sapien. Morbi imperdiet augue tempus nulla luctus, sit amet feugiat purus elementum.
    </string>


    <!-- ==================== Settings for Setting ============================================= -->
    <string name="pref_category_notif">Notifications</string>
    <string name="pref_category_display">Display</string>
    <string name="pref_category_other">Others</string>

    <string name="pref_title_notif">Push Notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_theme">Theme Color</string>
    <string name="pref_title_cache">Clear Image Cache</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_copyright">Copyright</string>
    <string name="pref_title_dev_name">Developed By</string>
    <string name="pref_title_term">Term &amp; Policies</string>

    <string name="pref_key_notif">key_notifications</string>
    <string name="pref_key_ringtone">key_ringtone</string>
    <string name="pref_key_vibrate">key_vibrate</string>
    <string name="pref_key_reset_cache">key_reset_cache</string>
    <string name="pref_key_theme">key_theme</string>


    <!-- Utilities Text -->
    <string name="no_internet">No internet connection</string>

    <!--Basic action Text-->
    <string name="OK">OK</string>
    <string name="SETTING">SETTING</string>
    <string name="CANCEL">CANCEL</string>
    <string name="SAVE">SAVE</string>
    <string name="DISMISS">DISMISS</string>
    <string name="HIDE">HIDE</string>
    <string name="RETRY">RETRY</string>
    <string name="DETAILS">DETAILS</string>
    <string name="FAILED">FAILED</string>
</resources>